[gd_scene load_steps=18 format=2]

[ext_resource path="res://UI/buttons.png" type="Texture" id=1]
[ext_resource path="res://UI/ibutton.png" type="Texture" id=2]
[ext_resource path="res://UI/VirtualControl.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 0, -32, 80, -64, 80, -64, -80, -32, -80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="CircleShape2D" id=9]
radius = 16.0

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="CircleShape2D" id=12]
radius = 16.0

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[node name="VirtualControl" type="Node"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Left" type="TouchScreenButton" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 24, 104 )
normal = SubResource( 1 )
pressed = SubResource( 2 )
shape = SubResource( 3 )
passby_press = true
visibility_mode = 1

[node name="Up" type="TouchScreenButton" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 88, 104 )
rotation = 1.5708
normal = SubResource( 1 )
pressed = SubResource( 2 )
shape = SubResource( 3 )
passby_press = true
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 88, 168 )
rotation = 3.14159
normal = SubResource( 1 )
pressed = SubResource( 2 )
shape = SubResource( 3 )
passby_press = true
visibility_mode = 1

[node name="Down" type="TouchScreenButton" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 24, 168 )
rotation = -1.5708
normal = SubResource( 1 )
pressed = SubResource( 2 )
shape = SubResource( 3 )
passby_press = true
visibility_mode = 1

[node name="Menu" type="TouchScreenButton" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 144, 0 )
normal = SubResource( 4 )
pressed = SubResource( 5 )
shape = SubResource( 6 )
passby_press = true
visibility_mode = 1

[node name="J" type="TouchScreenButton" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 248, 136 )
normal = SubResource( 7 )
pressed = SubResource( 8 )
shape = SubResource( 9 )
passby_press = true
visibility_mode = 1

[node name="K" type="TouchScreenButton" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 280, 104 )
normal = SubResource( 10 )
pressed = SubResource( 11 )
shape = SubResource( 12 )
passby_press = true
visibility_mode = 1

[node name="i" type="TouchScreenButton" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 288, 152 )
scale = Vector2( 0.75, 0.75 )
normal = SubResource( 13 )
pressed = SubResource( 14 )
shape = SubResource( 12 )
passby_press = true
visibility_mode = 1

[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="released" from="Left" to="." method="_on_Left_released"]
[connection signal="pressed" from="Up" to="." method="_on_Up_pressed"]
[connection signal="released" from="Up" to="." method="_on_Up_released"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="released" from="Right" to="." method="_on_Right_released"]
[connection signal="pressed" from="Down" to="." method="_on_Down_pressed"]
[connection signal="released" from="Down" to="." method="_on_Down_released"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="released" from="Menu" to="." method="_on_Menu_released"]
[connection signal="pressed" from="J" to="." method="_on_J_pressed"]
[connection signal="released" from="J" to="." method="_on_J_released"]
[connection signal="pressed" from="K" to="." method="_on_K_pressed"]
[connection signal="released" from="K" to="." method="_on_K_released"]
[connection signal="pressed" from="i" to="." method="_on_i_pressed"]
[connection signal="released" from="i" to="." method="_on_i_released"]
